# investing-portfolio-back

./: .dockerignore  .env.deploy.exemple  .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  pytest.ini
.github/actions/set-environment/: action.yaml
.github/workflows/: main.yaml
alembic/: env.py
app/: main.py
app/adapters/: deps.py
app/adapters/db/: db_manager.py  session.py
app/application/services/: stock_service.py
app/domain/entities/: __init__.py  stock.py
app/domain/repositories/: __init__.py  stock_repository.py
app/interfaces/: deps.py
app/interfaces/schemas/: stock_schema.py
core/: config.py
fastapi_app/: .env.app  .env.app.template  .env.template  alembic.ini  gunicorn_run_main.py  main.py  prestart.sh  run
fastapi_app/alembic/: env.py
fastapi_app/alembic/versions/: 2025_08_10_1835-1a6cf7197510_create_stock_table.py  2025_08_16_1906-5fa8e2e104bc_create_stock_table.py  2025_09_20_0040-7a70dc1e4482_create_stock_transaction_table.py  2025_09_20_0335-fd079cb87322_changen_stock_tran_model.py  2025_09_20_0416-b6e8c2044ea3_added_enums_to_stock_tran_model.py  2025_09_26_0958-dece643295ed_create_ralattion_between_stock_and_.py  2025_09_28_1601-2bba667978cd_changed_foreign_key_for_stock.py
fastapi_app/app/adapters/: deps.py  exceptions.py
fastapi_app/app/application/: exceptions.py
fastapi_app/core/: config.py
infra/dev/: docker-compose.dev.yaml
infra/main/: docker-compose.main.yaml
infra/test/: Dockerfile.test  docker-compose.test.yaml
nginx/: nginx.conf
scripts/: test.py
tests/: conftest.py  constants.py
tests/integration/: test_stock.py  test_stock_service.py  test_stock_transaction.py
(+33 files in other folders)
