[tool.poetry]
name = "investing-portfolio-back"
version = "0.1.0"
description = ""
authors = ["Lasouski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
sqlalchemy = "^2.0.42"
aiosqlite = "^0.21.0"
pydantic-settings = "^2.10.1"
alembic = "^1.16.4"


[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.35.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
