[tool.poetry]
name = "investing-portfolio-back"
version = "0.1.0"
description = ""
authors = ["Lasouski"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
sqlalchemy = "^2.0.42"
aiosqlite = "^0.21.0"
pydantic-settings = "^2.10.1"
alembic = "^1.16.4"
gunicorn = "^23.0.0"
asyncpg = "^0.30.0"


[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.35.0"}
black = "^25.1.0"
pytest = "^8.4.2"
setuptools = "^80.9.0"
wheel = "^0.45.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
